#19862, 19821: Fixing media field selection not showing up in IE
Work Items: 19821, 19862

--HG--
branch : 1.x

--- a/src/Orchard.Web/Modules/Orchard.MediaLibrary/Styles/dialog-mode.css
+++ b/src/Orchard.Web/Modules/Orchard.MediaLibrary/Styles/dialog-mode.css
@@ -5,7 +5,7 @@
 }
 
 .media-library-modal-window #media-library-main-selection-select {
-    display: initial;
+    display: inherit;
 }
 
 
